# WorkRoad

./: README.md
C++practice/1_yzqh/: CMakeLists.txt
C++practice/1_yzqh/src/: 01-testhello.cpp  02-namespace.cpp  03-zonghe.cpp
C++practice/2_yzlg/: CMakeLists.txt
C++practice/2_yzlg/src/: 01-yinyong.cpp  02-texing.cpp  03-newdelete.cpp
C++practice/3_yzfz1/: CMakeLists.txt
C++practice/3_yzfz1/include/: 04-leiwaidingyi.h  05-gouzaoTeacher.h  06-gouzaoinit.h
C++practice/3_yzfz1/src/: 01-leiduixiang.cpp  02-string.cpp  03-fengzhuang.cpp  04-leiwaidingyi.cpp  05-gouzaoTeacher.cpp  05-gouzaofun.cpp  06-gouzaoinit.cpp
C++practice/4_yzfz2/: CMakeLists.txt
C++practice/4_yzfz2/include/: 01-duixiangsz.h  02-duixiangcy.h  03-simplecopy.h  04-deepcopy.h  05-objectpointer.h  06-objpoint_coor.h  06-objpoint_line.h  07-thispointer.h  08-conmemfun-coor.h  08-conmemfun-line.h
C++practice/4_yzfz2/src/: 01-duixiangsz.cpp  01-dxszmain.cpp  02-duixiangcy.cpp  02-dxcymain.cpp  03-simplecopy.cpp  04-deepcopy.cpp  05-objectpointer.cpp  06-objmempoint.cpp  07-thispointer.cpp  08-conmemfun.cpp
C++practice/5_yzjc/: CMakeLists.txt
C++practice/5_yzjc/include/: 01-jcperson.h  01-jcworker.h  02-propriinf.h  02-propriper.h  02-proprisol.h  03-isaperson.h  03-isasoldier.h  04-djcFarmer.h  04-djcMigrant.h  04-djcWorker.h  05-virtualFarmer.h  05-virtualMigrant.h  05-virtualPerson.h  05-virtualWorker.h
C++practice/5_yzjc/src/: 01-jicheng.cpp  02-proprijc.cpp  03-isa.cpp  04-multiplejc.cpp  05-virtualjc.cpp
C++practice/6_yzdt/: CMakeLists.txt
C++practice/6_yzdt/include/: 01-virfunCircle.h  01-virfunRect.h  01-virfunShape.h  02-virdesCircle.h  02-virdesCoordinate.h  02-virdesRect.h  02-virdesShape.h  03-virfunlistpointerCircle.h  03-virfunlistpointerShape.h  04-purevirabstractDust.h  04-purevirabstractPerson.h  04-purevirabstractWorker.h  05-interfaceTypeFightPlane.h  05-interfaceTypeFlyable.h  05-interfaceTypePlane.h
C++practice/6_yzdt/src/: 01-virtualfun.cpp  02-virdestructor.cpp  03-virfunlistpointer.cpp  04-purevirabstract.cpp  05-interfaceType.cpp
C++practice/7_yzmb/: CMakeLists.txt
C++practice/7_yzmb/include/: 01-friendMatch.h  01-friendTime.h  02-staticTank.h  03-unitoverload.h
C++practice/7_yzmb/src/: 01-friendfun.cpp  02-staticfun.cpp  03-unitoverload.cpp  04-funtemplate.cpp  05-stlcode.cpp  06-stlList.cpp
